--- a/src/style.css
+++ b/src/style.css
@@ -1,19 +1,31 @@
-/* src/style.css */
 body {
-    font-family: Arial, sans-serif;
+    font-family: monospace;
     background-color: #f0f0f0;
     margin: 0;
     padding: 0;
+    background-image: url("https://images.unsplash.com/photo-1504608524841-42fe6f032b4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=765&q=80");
+    background-size: cover;
 }
 
+
 .container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
+max-width: 400px;
+margin: 0 auto; 
+padding: 20px;
+background-color: #cfaeae;
+box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+border-radius: 10px;
+
 }
+
+
+.center-container {
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh; 
+}
+
 
 h1 {
     text-align: center;
@@ -31,12 +43,16 @@ input[type='text'] {
 }
 
 button {
-    background-color: #007bff;
+    background-color: #a200ff;
     color: #fff;
     padding: 5px 10px;
     border: none;
     cursor: pointer;
     border-radius: 3px;
+    margin: 5px;
+    height: 20px;
+    width: 20;
+    font-size: xx-small;
 }
 
 button:hover {
